<resources>
    <string name="app_name">StudyApp</string>
    <!-- study -->
    <string name="topics_search">Topics search</string>
    <string name="subtopics_search">Subtopics search</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="create_topic">Create topic</string>
    <string name="create_subtopic">Create subtopic</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="go_back_to_topics">Go back to topics</string>
    <string name="close_search">Close search</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="go_back_to_subtopics">Go back to subtopics</string>
    <string name="edit">Edit</string>
    <string name="edit_subtopic">Edit subtopic</string>
    <string name="settings">Settings</string>
    <string name="open_settings">Open settings</string>
    <string name="edit_topic">Edit topic</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="delete_topic_dialog_title">Delete topic?</string>
    <string name="delete_topic_dialog_description">The topic %s will be permanently removed from the app.</string>
    <string name="go_to_login">Go to login</string>
    <string name="select_a_topic">Select a topic</string>
    <string name="no_topics_exist">No topics exist</string>
    <string name="no_subtopics_exist">No subtopics exist</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="not_bookmarked">Not bookmarked</string>
    <string name="ai_assistant">AI assistant</string>
    <string name="ai_assistant_top_app_bar_title">AI assistant</string>
    <string name="saved">Saved</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="dates">Dates</string>
...
    <string name="go_to_bookmarks">Go to bookmarks</string>
    <string name="go_to_dates">Go to dates</string>
    <string name="go_to_study">Go to study</string>
    <string name="study">Study</string>
    <string name="search_in">Search in %s</string>
    <string name="search_in_topics">Search in topics</string>
    <string name="unchecked">Unchecked</string>
    <string name="open_delete_topic_dialog">Open delete topic dialog</string>
    <string name="open_edit_topic_dialog">Open edit topic dialog</string>
    <string name="delete_subtopic_dialog_title">Delete subtopic?</string>
    <string name="delete_subtopic_dialog_description">The subtopic %s will be permanently removed from the app.</string>
    <string name="open_edit_subtopic_dialog">Open edit subtopic dialog</string>
    <string name="checked">Checked</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="toggle_checked">Toggle checked</string>
    <string name="open_login">Open login</string>
    <string name="open_search">Open search</string>
    <string name="go_to_next_subtopic">Go to next subtopic</string>
    <string name="go_to_previous_subtopic">Go to previous subtopic</string>
    <string name="open_delete_subtopic_dialog">Open delete subtopic dialog</string>
    <string name="could_not_show_content">Could not show content</string>
    <string name="Back">Retry</string>
    <string name="i_did_not_know">I did not know</string>
    <string name="i_knew_this">I knew this</string>
    <!-- authentication -->
    <string name="sign_into_your_account">Sign into your account</string>
...
