...
    navigateBack: () -> Unit,
    navigateToSubtopic: (Int) -> Unit,
    modifier: Modifier = Modifier
) {
    when (uiState) {
        SubtopicUiState.Loading ->
            LoadingIndicatorBox()

        is SubtopicUiState.Success ->
            SubtopicScaffold(
                uiState = uiState,
                updateSubtopic = updateSubtopic,
                deleteSubtopic = deleteSubtopic,
...
                contentDescription = stringResource(R.string.go_to_next_subtopic)
            )
        }
    }

    if (isScreenWidthCompact) {
        SubtopicToolbar(
            floatingActionButton = floatingActionButton,
            content = {
                deleteEditButtons()
                previousNextButtons()
            },
            expanded = expanded,
            modifier = modifier

        )
    } else {
        SubtopicToolbarsRow(
            floatingActionButton = floatingActionButton,
            previousNextButtons = previousNextButtons,
            deleteEditButtons = deleteEditButtons,
            expanded = expanded,
            modifier = modifier.fillMaxWidth()
        )
...
private fun SubtopicScreenSuccessPreview() {
    StudyAppTheme {
        SubtopicScreen(
            uiState = SubtopicUiState.Success(
                subtopic = Subtopic(
                    id = 1,
                    title = "Subtopic Title",
                    description = "Subtopic Description",
                    checked = false,
                    bookmarked = false,
                    topicId = 1,
                    imageUri = null,
                    userId = "user id"
                ),
...
