...
    navigateToTopic: (Int) -> Unit,
    navigateBack: () -> Unit,
    modifier: Modifier = Modifier,
) {
    when (subtopicsUiState) {
        SubtopicsUiState.Loading ->
            LoadingIndicatorBox()

        is SubtopicsUiState.Success ->
            if (authenticationUiState is AuthenticationUiState.SignedIn) {
                val userId = authenticationUiState.userId
                SubtopicsScaffold(
                    uiState = subtopicsUiState,
...
                        .floatingToolbarVerticalNestedScroll(
                            expanded = expanded,
                            onExpand = { expanded = true },
                            onCollapse = { expanded = false }
                        )
                )
                SubtopicsToolbar(
                    onDelete = { dialogType = SubtopicsDialogType.DELETE_TOPIC },
                    onEdit = { dialogType = SubtopicsDialogType.EDIT_TOPIC },
                    onCreate = { dialogType = SubtopicsDialogType.CREATE_SUBTOPIC },
                    expanded = expanded,
                    modifier =
                        Modifier
...
